Fix highlight banner alignment on smaller viewports (#36)
Resolve #35 

- Reduced highlight banner for robots to 2 entries, overflow moved into "legacy robot" section

- Assigned minimum width of 480px to temporarily avoid image scaling issues on smaller viewports

- Created .inner-split class to allow the homepage competition highlight to have a 50/50 screen-share space under the new flex rules in a highlight banner component

- Reordered team leads to accurately reflect the order it displays on the rendered webpage

- Change highlight banner to a new flex rule that pushes subsequent content down if it cannot fit on the same line anymore without overflowing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1402,7 +1402,7 @@
 	@media screen and (max-width: 480px) {
 
 		html, body {
-			min-width: 320px;
+			min-width: 480px; /* Not supporting any smaller width due to image scaling issues */
 		}
 
 	}
@@ -3642,12 +3642,10 @@
 				.wrapper.cta > .inner > * {
 					padding-left: 1.5em;
 					-ms-flex: auto;
-					width: 50%;
 				}
 
 				.wrapper.cta > .inner > :first-child {
 					padding-left: 0;
-					width: 50%;
 				}
 
 			body.is-mobile .wrapper.cta {
@@ -3848,6 +3846,7 @@
 		position: fixed;
 		top: 0;
 		width: 100%;
+		min-width: 480px;
 		z-index: 10000;
 	}
 
@@ -4744,6 +4743,11 @@ ul.sponsors{
 
 /*-----TEAM ROSTER-----*/
 
+ul.team-lead {
+	flex: 0 0 auto;
+	display: flex;
+}
+
 .team-lead li{
 	width: 12em;
 	margin: 0em 2em;
@@ -4755,7 +4759,6 @@ ul.sponsors{
 	text-align: center;
 	background: transparent;
 	color:#EEEEEE;
-	float: right;
 }
 
 	.team-lead li:first-child{
@@ -4838,16 +4841,10 @@ ul.sponsors{
 			color: rgba(47,55,63, 0.8);
 		}
 
-.wrapper.cta > .inner > .inner-col-align {
-	width: 100%;
+.wrapper.cta > .inner > :first-child {
+	flex: 1 1 auto;
 }
 
-	.wrapper.cta > .inner > .inner-col-align ul{
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-	}
-
-		.wrapper.cta > .inner > .inner-col-align ul li{
-			margin: 0px;
-		}
+.wrapper.cta > .inner.inner-split > * {
+	max-width: 50%;
+}
